# rag-learning

./: .gitignore  README.md  ToDo.md  _config.yml  _toc.yml  main.ipynb  pyproject.toml
.github/workflows/: deploy-book.yml
_build/.doctrees/: README.doctree  ToDo.doctree  environment.pickle
_build/.doctrees/src/: _template.doctree  section1_LLM-App-development.doctree  section2_ChatGPT-API-basic.doctree
_build/html/: .buildinfo  README.html  ToDo.html  genindex.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: README.md  ToDo.md
_build/html/_sources/src/: section2_ChatGPT-API-basic.ipynb
_build/html/src/: _template.html  section1_LLM-App-development.html  section2_ChatGPT-API-basic.html
_build/jupyter_execute/src/: _template.ipynb  section1_LLM-App-development.ipynb  section2_ChatGPT-API-basic.ipynb
src/: _template.ipynb  section1_LLM-App-development.ipynb  section2_ChatGPT-API-basic.ipynb  section3_promptEngineering.ipynb  section4_langchain-basic.ipynb
