[project]
name = "rag-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "ipykernel>=6.30.0",
    "isort>=6.0.1",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.3",
    "mypy>=1.17.0",
    "numpy>=2.3.2",
    "openai==1.40.6",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "httpx==0.27.2",
]
